fix issue with arca-angles images overflowing block editor wrapper

--- a/src/sass/custom-editor-style.scss
+++ b/src/sass/custom-editor-style.scss
@@ -46,3 +46,9 @@
 
 /* Child theme CSS for editor */
 @import "theme/_child_theme.scss";
+
+/* Fix overflowing images in editor */
+.wp-block-image .components-resizable-box__container {
+	max-width: 100% !important;
+	height: auto !important;
+}
